methode-1/logs/dag_id=dag_with_postgres_operator_v01/run_id=scheduled__2022-10-09T00:00:00+00:00/task_id=create_postgres_table/attempt=1.log
[2024-01-02T19:41:33.452+0100] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v01.create_postgres_table scheduled__2022-10-09T00:00:00+00:00 [queued]>
[2024-01-02T19:41:33.459+0100] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v01.create_postgres_table scheduled__2022-10-09T00:00:00+00:00 [queued]>
[2024-01-02T19:41:33.461+0100] {taskinstance.py:1361} INFO - Starting attempt 1 of 6
[2024-01-02T19:41:33.481+0100] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2022-10-09 00:00:00+00:00
[2024-01-02T19:41:33.485+0100] {standard_task_runner.py:57} INFO - Started process 32855 to run task
[2024-01-02T19:41:33.493+0100] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'dag_with_postgres_operator_v01', 'create_postgres_table', 'scheduled__2022-10-09T00:00:00+00:00', '--job-id', '13791', '--raw', '--subdir', '/Users/user/Desktop/Learning/AIRFLOW-TUTORIAL/methode-1/dags/dag_with_postgres.py', '--cfg-path', '/var/folders/gn/cr4yj18d1tv34pkws9v_kq1r0000gn/T/tmpppdr1bis']
[2024-01-02T19:41:33.497+0100] {standard_task_runner.py:85} INFO - Job 13791: Subtask create_postgres_table
[2024-01-02T19:41:33.560+0100] {task_command.py:416} INFO - Running <TaskInstance: dag_with_postgres_operator_v01.create_postgres_table scheduled__2022-10-09T00:00:00+00:00 [running]> on host macbook-pro-de-user.local
[2024-01-02T19:41:34.095+0100] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='aida' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator_v01' AIRFLOW_CTX_TASK_ID='create_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2022-10-09T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2022-10-09T00:00:00+00:00'
[2024-01-02T19:41:34.096+0100] {sql.py:274} INFO - Executing: 
            crete table if not exists dag_runs(
            dt date,
            dag_id character varying,
            primary key(dt, dag_id)
            )
        
[2024-01-02T19:41:34.102+0100] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-01-02T19:41:34.289+0100] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-01-02T19:41:34.324+0100] {sql.py:418} INFO - Running statement: 
            crete table if not exists dag_runs(
            dt date,
            dag_id character varying,
            primary key(dt, dag_id)
            )
        , parameters: None
[2024-01-02T19:41:34.326+0100] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/Users/user/Desktop/Learning/AIRFLOW-TUTORIAL/py_env/lib/python3.11/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/Users/user/Desktop/Learning/AIRFLOW-TUTORIAL/py_env/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/Users/user/Desktop/Learning/AIRFLOW-TUTORIAL/py_env/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "crete"
LINE 2:             crete table if not exists dag_runs(
                    ^

[2024-01-02T19:41:34.332+0100] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator_v01, task_id=create_postgres_table, execution_date=20221009T000000, start_date=20240102T184133, end_date=20240102T184134
[2024-01-02T19:41:34.344+0100] {standard_task_runner.py:104} ERROR - Failed to execute job 13791 for task create_postgres_table (syntax error at or near "crete"
LINE 2:             crete table if not exists dag_runs(
                    ^
; 32855)
[2024-01-02T19:41:34.377+0100] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2024-01-02T19:41:34.395+0100] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
